# ecomm-2025-02-micsvc

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  subscribe_request.md
.github/workflows/: terraform.yml
inventory/: main.py
inventory-service/: main.py
payment-service/: main.py
